@@ -1,3 +1,8 @@
+2011-09-15  Nick Alcock  <nick.alcock@oracle.com>
+
+	* test/triggers/mmap.c: Use tmpfile(), not open(). Reindent.
+	* test/triggers/testprobe.c (main): Tiny formatting fix.
+
 2011-09-15  Shujing Zhao  <pearly.zhao@oracle.com>
 
 	* test/intro/trussrw.d: Adjust: fix copyright date, assign trigger.
